--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <title>WebUSB Demos</title>
+  </head>
+  <body>
+    <h1>WebUSB Demos</h1>
+    <ul>
+      <li><a href="console/">Console</a></li>
+      <li><a href="rgb/">RGB LED</a></li>
+	  <li><a href="my/">MY FUN</a></li>
+    </ul>
+  </body>
 </html>
